fix(ci): login (#25)